mule-user-guide/v/3.6/_toc.adoc
// Mule Runtime 3.6 TOC文件

*  link:/mule-user-guide/v/3.6/index[骡子运行时间]
**  link:/mule-user-guide/v/3.6/mule-fundamentals[骡子基础]
***  link:/getting-started/build-a-hello-world-application[构建一个Hello World Mule应用程序]
***  link:/mule-user-guide/v/3.6/mule-concepts[骡子概念]
****  link:/mule-user-guide/v/3.6/elements-in-a-mule-flow[骡子流中的元素]
*****  link:/mule-user-guide/v/3.6/mule-connectors[Mule连接器]
*****  link:/mule-user-guide/v/3.6/mule-components[Mule组件]
*****  link:/mule-user-guide/v/3.6/mule-transformers[骡变形金刚]
*****  link:/mule-user-guide/v/3.6/mule-filters-scopes-and-routers[Mule过滤器范围和路由器]
*****  link:/mule-user-guide/v/3.6/mule-exception-strategies[骡子例外策略]
***  link:/mule-user-guide/v/3.6/mule-message-structure[Mule消息结构]
***  link:/mule-user-guide/v/3.6/message-state[消息状态]
***  link:/mule-user-guide/v/3.6/global-elements[全球元素]
***  link:/mule-user-guide/v/3.6/mule-application-architecture[Mule应用程序架构]
***  link:/mule-user-guide/v/3.6/flows-and-subflows[流量和子流量]
****  link:/mule-user-guide/v/3.6/flow-architecture-advanced-use-case[Flow Architecture高级用例]
***  link:/mule-user-guide/v/3.6/mule-security[安全在骡子]
**  link:/mule-user-guide/v/3.6/installing[安装]
***  link:/mule-user-guide/v/3.6/hardware-and-software-requirements[硬件和软件要求]
***  link:/mule-user-guide/v/3.6/downloading-and-starting-mule-esb[下载并启动Mule ESB]
***  link:/mule-user-guide/v/3.6/installing-an-enterprise-license[安装企业许可证]
***  link:/mule-user-guide/v/3.6/extending-mule[延长骡子]
**  link:/mule-user-guide/v/3.6/developing[发展]
***  link:/mule-user-guide/v/3.6/anypoint-connectors[Anypoint连接器]
****  link:/mule-user-guide/v/3.6/installing-connectors[安装连接器]
****  link:/mule-user-guide/v/3.6/connector-configuration-reference[连接器配置参考]
****  link:/mule-user-guide/v/3.6/working-with-multiple-versions-of-connectors[使用多个版本的连接器]
****  link:/mule-user-guide/v/3.6/using-a-connector-to-access-an-oauth-api[使用连接器访问OAuth API]
****  link:/mule-user-guide/v/3.6/auto-paging-in-anypoint-connectors[在Anypoint连接器中自动寻呼]
****  link:/mule-user-guide/v/3.6/ajax-connector[Ajax连接器]
****  link:/mule-user-guide/v/3.6/amqp-connector[AMQP连接器]
*****  link:/mule-user-guide/v/3.6/amqp-connector-examples[AMQP连接器示例]
*****  link:/mule-user-guide/v/3.6/amqp-connector-reference[AMQP连接器参考]
****  link:/mule-user-guide/v/3.6/cassandra-connector[Cassandra连接器]
****  link:/mule-user-guide/v/3.6/cmis-connector[CMIS连接器]
****  link:/mule-user-guide/v/3.6/database-connector[数据库连接器]
*****  link:/mule-user-guide/v/3.6/database-connector-examples[数据库连接器示例]
*****  link:/mule-user-guide/v/3.6/database-connector-reference[数据库连接器参考]
****  link:/mule-user-guide/v/3.6/dotnet-connector-guide[DotNet连接器指南]
*****  link:/mule-user-guide/v/3.6/dotnet-connector-user-guide[DotNet连接器用户指南]
*****  link:/mule-user-guide/v/3.6/dotnet-connector-migration-guide[DotNet连接器迁移指南]
*****  link:/mule-user-guide/v/3.6/dotnet-connector-faqs[DotNet连接器常见问题]
****  link:/mule-user-guide/v/3.6/file-connector[文件连接器]
****  link:/mule-user-guide/v/3.6/ftp-connector[FTP连接器]
****  link:/mule-user-guide/v/3.6/generic-connector[通用连接器]
****  link:/mule-user-guide/v/3.6/hdfs-connector[HDFS连接器]
****  link:/mule-user-guide/v/3.6/http-connector[HTTP连接器]
*****  link:/mule-user-guide/v/3.6/http-listener-connector[HTTP侦听器连接器]
*****  link:/mule-user-guide/v/3.6/http-request-connector[HTTP请求连接器]
*****  link:/mule-user-guide/v/3.6/authentication-in-http-requests[HTTP请求中的身份验证]
*****  link:/mule-user-guide/v/3.6/tls-configuration[TLS配置]
*****  link:/mule-user-guide/v/3.6/migrating-to-the-new-http-connector[迁移到新的HTTP连接器]
****  link:/mule-user-guide/v/3.6/http-connector-deprecated[HTTP连接器 - 已弃用]
****  link:/mule-user-guide/v/3.6/imap-connector[IMAP连接器]
****  link:/mule-user-guide/v/3.6/jdbc-connector[JDBC连接器]
****  link:/mule-user-guide/v/3.6/microsoft-dynamics-ax-2012-connector[Microsoft Dynamics AX 2012连接器]
****  link:/mule-user-guide/v/3.6/microsoft-dynamics-crm-connector[Microsoft Dynamics CRM连接器]
****  link:/mule-user-guide/v/3.6/microsoft-service-bus-connector[Microsoft Service Bus连接器]
*****  link:/mule-user-guide/v/3.6/microsoft-service-bus-connector-faq[Microsoft Service Bus连接器常见问题]
****  link:/mule-user-guide/v/3.6/microsoft-sharepoint-2013-connector[Microsoft SharePoint 2013连接器]
****  link:/mule-user-guide/v/3.6/microsoft-sharepoint-2010-connector[Microsoft SharePoint 2010连接器]
****  link:/mule-user-guide/v/3.6/msmq-connector[MSMQ连接器]
*****  link:/mule-user-guide/v/3.6/msmq-connector-user-guide[MSMQ连接器用户指南]
*****  link:/mule-user-guide/v/3.6/windows-gateway-services-guide[Windows网关服务指南]
*****  link:/mule-user-guide/v/3.6/msmq-connector-faqs[MSMQ连接器常见问题]
****  link:/mule-user-guide/v/3.6/netsuite-connector[NetSuite连接器]
****  link:/mule-user-guide/v/3.6/oracle-e-business-suite-connector[Oracle电子商务套件连接器]
****  link:/mule-user-guide/v/3.6/peoplesoft-connector[PeopleSoft连接器]
****  link:/mule-user-guide/v/3.6/pop3-connector[POP3连接器]
****  link:/mule-user-guide/v/3.6/quartz-connector[石英连接器]
****  link:/mule-user-guide/v/3.6/salesforce-analytics-cloud-connector[Salesforce Analytics云连接器]
****  link:/mule-user-guide/v/3.6/salesforce-connector[Salesforce连接器]
*****  link:/mule-user-guide/v/3.6/salesforce-connector-reference[Salesforce连接器参考]
*****  link:/mule-user-guide/v/3.6/salesforce-connector-authentication[Salesforce连接器身份验证]
*****  link:/mule-user-guide/v/3.6/salesforce-contact-aggregation-example[Salesforce联系人聚合示例]
****  link:/mule-user-guide/v/3.6/sap-connector[SAP连接器]
****  link:/mule-user-guide/v/3.6/concur-connector[SAP Concur连接器]
****  link:/mule-user-guide/v/3.6/servicenow-connector[ServiceNow连接器]
****  link:/mule-user-guide/v/3.6/servlet-connector[Servlet连接器]
****  link:/mule-user-guide/v/3.6/sftp-connector[SFTP连接器]
****  link:/mule-user-guide/v/3.6/siebel-connector[Siebel连接器]
****  link:/mule-user-guide/v/3.6/web-service-consumer[Web服务使用者]
*****  link:/mule-user-guide/v/3.6/web-service-consumer-reference[Web服务消费者参考]
****  link:/mule-user-guide/v/3.6/windows-powershell-connector-guide[Windows PowerShell连接器指南]
****  link:/mule-user-guide/v/3.6/wmq-connector[WMQ连接器]
****  link:/mule-user-guide/v/3.6/workday-connector[工作日连接器]
***  link:/mule-user-guide/v/3.6/components[组件]
****  link:/mule-user-guide/v/3.6/configuring-components[配置组件]
*****  link:/mule-user-guide/v/3.6/configuring-java-components[配置Java组件]
*****  link:/mule-user-guide/v/3.6/developing-components[开发组件]
*****  link:/mule-user-guide/v/3.6/entry-point-resolver-configuration-reference[入口点解析器配置参考]
*****  link:/mule-user-guide/v/3.6/component-bindings[组件绑定]
*****  link:/mule-user-guide/v/3.6/using-interceptors[使用拦截器]
****  link:/mule-user-guide/v/3.6/cxf-component-reference[CXF组件参考]
****  link:/mule-user-guide/v/3.6/echo-component-reference[回声组件参考]
****  link:/mule-user-guide/v/3.6/expression-component-reference[表达组件参考]
****  link:/mule-user-guide/v/3.6/flow-reference-component-reference[流参考组件参考]
****  link:/mule-user-guide/v/3.6/http-static-resource-handler[HTTP静态资源处理程序]
****  link:/mule-user-guide/v/3.6/http-response-builder[HTTP响应生成器]
****  link:/mule-user-guide/v/3.6/invoke-component-reference[调用组件引用]
****  link:/mule-user-guide/v/3.6/java-component-reference[Java组件参考]
****  link:/mule-user-guide/v/3.6/logger-component-reference[记录器组件参考]
****  link:/mule-user-guide/v/3.6/logging-in-mule[登录Mule]
****  link:/mule-user-guide/v/3.6/rest-component-reference[REST组件参考]
****  link:/mule-user-guide/v/3.6/script-component-reference[脚本组件参考]
*****  link:/mule-user-guide/v/3.6/groovy-component-reference[Groovy组件参考]
*****  link:/mule-user-guide/v/3.6/javascript-component-reference[JavaScript组件参考]
*****  link:/mule-user-guide/v/3.6/python-component-reference[Python组件参考]
*****  link:/mule-user-guide/v/3.6/ruby-component-reference[Ruby组件参考]
***  link:/mule-user-guide/v/3.6/filters[过滤器]
****  link:/mule-user-guide/v/3.6/custom-filter[定制过滤器]
****  link:/mule-user-guide/v/3.6/exception-filter[异常过滤器]
****  link:/mule-user-guide/v/3.6/json-schema-validator[JSON模式验证器]
****  link:/mule-user-guide/v/3.6/logic-filter[逻辑滤波器]
****  link:/mule-user-guide/v/3.6/message-filter[消息过滤器]
****  link:/mule-user-guide/v/3.6/message-property-filter[消息属性过滤器]
****  link:/mule-user-guide/v/3.6/regex-filter[正则表达式过滤器]
****  link:/mule-user-guide/v/3.6/schema-validation-filter[模式验证过滤器]
****  link:/mule-user-guide/v/3.6/wildcard-filter[通配符过滤器]
****  link:/mule-user-guide/v/3.6/idempotent-filter[幂等过滤器]
****  link:/mule-user-guide/v/3.6/filter-ref[过滤器参考]
***  link:/mule-user-guide/v/3.6/routers[路由器]
****  link:/mule-user-guide/v/3.6/all-flow-control-reference[所有流量控制参考]
****  link:/mule-user-guide/v/3.6/choice-flow-control-reference[选择流量控制参考]
****  link:/mule-user-guide/v/3.6/scatter-gather[分散 - 集中]
****  link:/mule-user-guide/v/3.6/splitter-flow-control-reference[分流器流量控制参考]
***  link:/mule-user-guide/v/3.6/scopes[领域]
****  link:/mule-user-guide/v/3.6/async-scope-reference[异步范围参考]
****  link:/mule-user-guide/v/3.6/cache-scope[缓存范围]
****  link:/mule-user-guide/v/3.6/foreach[的foreach]
****  link:/mule-user-guide/v/3.6/message-enricher[消息Enricher]
****  link:/mule-user-guide/v/3.6/poll-reference[投票参考]
*****  link:/mule-user-guide/v/3.6/poll-schedulers[投票调度程序]
****  link:/mule-user-guide/v/3.6/request-reply-scope[请求 - 应答范围]
****  link:/mule-user-guide/v/3.6/transactional[交易]
****  link:/mule-user-guide/v/3.6/until-successful-scope[直到成功范围]
***  link:/mule-user-guide/v/3.6/transformers[变形金刚]
****  link:/mule-user-guide/v/3.6/using-transformers[使用变形金刚]
*****  link:/mule-user-guide/v/3.6/transformers-configuration-reference[变压器配置参考]
*****  link:/mule-user-guide/v/3.6/native-support-for-json[本机支持JSON]
*****  link:/mule-user-guide/v/3.6/xmlprettyprinter-transformer[XmlPrettyPrinter变压器]
****  link:/mule-user-guide/v/3.6/creating-custom-transformers[创建自定义变形金刚]
*****  link:/mule-user-guide/v/3.6/creating-flow-objects-and-transformers-using-annotations[使用注释创建流对象和变形金刚]
*****  link:/mule-user-guide/v/3.6/function-annotation[功能注释]
*****  link:/mule-user-guide/v/3.6/groovy-annotation[Groovy注释]
*****  link:/mule-user-guide/v/3.6/inboundattachments-annotation[InboundAttachments注释]
*****  link:/mule-user-guide/v/3.6/inboundheaders-annotation[InboundHeaders注解]
*****  link:/mule-user-guide/v/3.6/lookup-annotation[查找注释]
*****  link:/mule-user-guide/v/3.6/mule-annotation[骡子注释]
*****  link:/mule-user-guide/v/3.6/outboundattachments-annotation[OutboundAttachments注释]
*****  link:/mule-user-guide/v/3.6/outboundheaders-annotation[OutboundHeaders注释]
*****  link:/mule-user-guide/v/3.6/payload-annotation[有效载荷注释]
*****  link:/mule-user-guide/v/3.6/schedule-annotation[计划注释]
*****  link:/mule-user-guide/v/3.6/transformer-annotation[变压器注释]
*****  link:/mule-user-guide/v/3.6/xpath-annotation[XPath注释]
*****  link:/mule-user-guide/v/3.6/creating-custom-transformer-classes[创建自定义转换器类]
****  link:/mule-user-guide/v/3.6/append-string-transformer-reference[附加字符串转换器参考]
****  link:/mule-user-guide/v/3.6/attachment-transformer-reference[附件变压器参考]
****  link:/mule-user-guide/v/3.6/expression-transformer-reference[表达式转换器参考]
****  link:/mule-user-guide/v/3.6/java-transformer-reference[Java变压器参考]
****  link:/mule-user-guide/v/3.6/object-to-xml-transformer-reference[对XML转换器参考的对象]
****  link:/mule-user-guide/v/3.6/parse-template-reference[解析模板参考]
****  link:/mule-user-guide/v/3.6/property-transformer-reference[属性变换器参考]
****  link:/mule-user-guide/v/3.6/script-transformer-reference[脚本变换器参考]
****  link:/mule-user-guide/v/3.6/session-variable-transformer-reference[会话变量变换器参考]
****  link:/mule-user-guide/v/3.6/set-payload-transformer-reference[设置有效负载变换器参考]
****  link:/mule-user-guide/v/3.6/variable-transformer-reference[可变变压器参考]
****  link:/mule-user-guide/v/3.6/xml-to-object-transformer-reference[XML到对象转换器参考]
****  link:/mule-user-guide/v/3.6/xslt-transformer-reference[XSLT变压器参考]
****  link:/mule-user-guide/v/3.6/business-events[商业活动]
***  link:/mule-user-guide/v/3.6/error-handling[错误处理]
****  link:/mule-user-guide/v/3.6/catch-exception-strategy[捕捉异常策略]
****  link:/mule-user-guide/v/3.6/choice-exception-strategy[选择例外策略]
****  link:/mule-user-guide/v/3.6/reference-exception-strategy[参考例外策略]
****  link:/mule-user-guide/v/3.6/rollback-exception-strategy[回滚异常策略]
****  link:/mule-user-guide/v/3.6/exception-strategy-most-common-use-cases[异常策略最常见的用例]
***  link:/mule-user-guide/v/3.6/mule-expression-language-mel[Mule表达语言MEL]
****  link:/mule-user-guide/v/3.6/mule-expression-language-basic-syntax[Mule表达式语言基本语法]
****  link:/mule-user-guide/v/3.6/mule-expression-language-examples[Mule表达语言示例]
****  link:/mule-user-guide/v/3.6/mule-expression-language-reference[Mule表达式语言参考]
*****  link:/mule-user-guide/v/3.6/mule-expression-language-date-and-time-functions[Mule表达语言日期和时间函数]
****  link:/mule-user-guide/v/3.6/mule-expression-language-tips[Mule表达语言技巧]
***  link:/mule-user-guide/v/3.6/using-maven-with-mule[和Mule一起使用Maven]
****  link:/mule-user-guide/v/3.6/using-maven-in-mule-esb[在Mule ESB中使用Maven]
*****  link:/mule-user-guide/v/3.6/configuring-maven-to-work-with-mule-esb[配置Maven以使用Mule ESB]
*****  link:/mule-user-guide/v/3.6/maven-tools-for-mule-esb[适用于Mule ESB的Maven工具]
*****  link:/mule-user-guide/v/3.6/mule-esb-plugin-for-maven[Male的Mule ESB插件]
****  link:/mule-user-guide/v/3.6/maven-reference[Maven参考]
***  link:/mule-user-guide/v/3.6/batch-processing[批量处理]
****  link:/mule-user-guide/v/3.6/batch-filters-and-batch-commit[批量过滤器和批量提交]
****  link:/mule-user-guide/v/3.6/batch-processing-reference[批处理参考]
*****  link:/mule-user-guide/v/3.6/using-mel-with-batch-processing[使用MEL进行批处理]
****  link:/mule-user-guide/v/3.6/batch-streaming-and-job-execution[批处理流和作业执行]
****  link:/mule-user-guide/v/3.6/record-variable[记录变量]
***  link:/mule-user-guide/v/3.6/transaction-management[交易管理]
****  link:/mule-user-guide/v/3.6/single-resource-transactions[单一资源交易]
****  link:/mule-user-guide/v/3.6/multiple-resource-transactions[多资源交易]
****  link:/mule-user-guide/v/3.6/xa-transactions[XA交易]
****  link:/mule-user-guide/v/3.6/using-bitronix-to-manage-transactions[使用Bitronix管理事务]
***  link:/mule-user-guide/v/3.6/the-properties-editor[属性编辑器]
***  link:/mule-user-guide/v/3.6/adding-and-removing-user-libraries[添加和删​​除用户库]
**  link:/mule-user-guide/v/3.6/shared-resources[共享资源]
****  link:/mule-user-guide/v/3.6/setting-environment-variables[设置环境变量]
***  link:/mule-user-guide/v/3.6/mule-versus-web-application-server[Mule与Web应用程序服务器]
***  link:/mule-user-guide/v/3.6/publishing-and-consuming-apis-with-mule[使用Mule发布和使用API]
****  link:/mule-user-guide/v/3.6/publishing-a-soap-api[发布一个SOAP API]
*****  link:/mule-user-guide/v/3.6/securing-a-soap-api[保护SOAP API]
*****  link:/mule-user-guide/v/3.6/extra-cxf-component-configurations[额外的CXF组件配置]
****  link:/mule-user-guide/v/3.6/consuming-a-soap-api[使用SOAP API]
****  link:/mule-user-guide/v/3.6/publishing-a-rest-api[发布REST API]
****  link:/mule-user-guide/v/3.6/consuming-a-rest-api[使用REST API]
*****  link:/mule-user-guide/v/3.6/rest-api-examples[REST API示例]
***  link:/mule-user-guide/v/3.6/advanced-usage-of-mule-esb[Mule ESB的高级用法]
****  link:/mule-user-guide/v/3.6/storing-objects-in-the-registry[将对象存储在注册表中]
****  link:/mule-user-guide/v/3.6/object-scopes[对象范围]
****  link:/mule-user-guide/v/3.6/using-mule-with-spring[春天使用骡子]
*****  link:/mule-user-guide/v/3.6/sending-and-receiving-mule-events-in-spring[在春季发送和接收Mule事件]
*****  link:/mule-user-guide/v/3.6/spring-application-contexts[Spring应用程序上下文]
*****  link:/mule-user-guide/v/3.6/using-spring-beans-as-flow-components[使用Spring Beans作为流程组件]
****  link:/mule-user-guide/v/3.6/configuring-properties[配置属性]
****  link:/mule-user-guide/v/3.6/creating-and-managing-a-cluster-manually[手动创建和管理群集]
****  link:/mule-user-guide/v/3.6/distributed-file-polling[分布式文件轮询]
****  link:/mule-user-guide/v/3.6/distributed-locking[分布式锁定]
****  link:/mule-user-guide/v/3.6/streaming[流]
****  link:/mule-user-guide/v/3.6/about-configuration-builders[关于配置建造者]
****  link:/mule-user-guide/v/3.6/internationalizing-strings[国际化字符串]
****  link:/mule-user-guide/v/3.6/bootstrapping-the-registry[引导注册表]
****  link:/mule-user-guide/v/3.6/tuning-performance[调整性能]
****  link:/mule-user-guide/v/3.6/mule-agents[骡代理]
*****  link:/mule-user-guide/v/3.6/agent-security-disabled-weak-ciphers[代理安全：禁用弱密码]
*****  link:/mule-user-guide/v/3.6/jmx-management[JMX管理]
****  link:/mule-user-guide/v/3.6/flow-processing-strategies[流程处理策略]
****  link:/mule-user-guide/v/3.6/reliability-patterns[可靠性模式]
****  link:/mule-user-guide/v/3.6/mule-object-stores[骡子对象商店]
****  link:/mule-user-guide/v/3.6/configuring-reconnection-strategies[配置重新连接策略]
****  link:/mule-user-guide/v/3.6/using-the-mule-client[使用Mule客户端]
****  link:/mule-user-guide/v/3.6/using-web-services[使用Web服务]
*****  link:/mule-user-guide/v/3.6/proxying-web-services[代理Web服务]
*****  link:/mule-user-guide/v/3.6/using-.net-web-services-with-mule[与Mule一起使用.NET Web服务]
****  link:/mule-user-guide/v/3.6/passing-additional-arguments-to-the-jvm-to-control-mule[将附加参数传递给JVM以控制Mule]
**  link:/mule-user-guide/v/3.6/securing[保护]
***  link:/mule-user-guide/v/3.6/anypoint-enterprise-security[Anypoint企业安全]
****  link:/mule-user-guide/v/3.6/installing-anypoint-enterprise-security[安装Anypoint Enterprise Security]
****  link:/mule-user-guide/v/3.6/mule-secure-token-service[Mule安全令牌服务]
*****  link:/mule-user-guide/v/3.6/creating-an-oauth-2.0-web-service-provider[创建一个Oauth 2.0 Web服务提供程序]
*****  link:/mule-user-guide/v/3.6/authorization-grant-types[授权授予类型]
****  link:/mule-user-guide/v/3.6/mule-credentials-vault[Mule证书库]
****  link:/mule-user-guide/v/3.6/mule-message-encryption-processor[Mule消息加密处理器]
*****  link:/mule-user-guide/v/3.6/pgp-encrypter[PGP加密器]
****  link:/mule-user-guide/v/3.6/mule-digital-signature-processor[Mule数字签名处理器]
****  link:/mule-user-guide/v/3.6/anypoint-filter-processor[Anypoint滤波器处理器]
****  link:/mule-user-guide/v/3.6/mule-crc32-processor[Mule CRC32处理器]
****  link:/mule-user-guide/v/3.6/anypoint-enterprise-security-example-application[Anypoint企业安全示例应用程序]
****  link:/mule-user-guide/v/3.6/mule-sts-oauth-2.0-example-application[Mule STS Oauth 2.0示例应用程序]
***  link:/mule-user-guide/v/3.6/configuring-security[配置安全性]
****  link:/mule-user-guide/v/3.6/configuring-the-spring-security-manager[配置Spring Security Manager]
****  link:/mule-user-guide/v/3.6/component-authorization-using-spring-security[使用Spring Security的组件授权]
****  link:/mule-user-guide/v/3.6/setting-up-ldap-provider-for-spring-security[为Spring Security设置LDAP提供程序]
****  link:/mule-user-guide/v/3.6/upgrading-from-acegi-to-spring-security[从Acegi升级到Spring Security]
****  link:/mule-user-guide/v/3.6/encryption-strategies[加密策略]
****  link:/mule-user-guide/v/3.6/pgp-security[PGP安全]
****  link:/mule-user-guide/v/3.6/jaas-security[Jaas安全]
****  link:/mule-user-guide/v/3.6/saml-module[SAML模块]
***  link:/mule-user-guide/v/3.6/fips-140-2-compliance-support[FIPS 140-2合规性支持]
**  link:/mule-user-guide/v/3.6/debugging[调试]
***  link:/mule-user-guide/v/3.6/troubleshooting[故障排除]
****  link:/mule-user-guide/v/3.6/configuring-mule-stacktraces[配置Mule Stacktraces]
****  link:/mule-user-guide/v/3.6/debugging-outside-studio[在Studio外进行调试]
****  link:/mule-user-guide/v/3.6/logging[记录]
**  link:/mule-user-guide/v/3.6/testing[测试]
***  link:/mule-user-guide/v/3.6/introduction-to-testing-mule[测试骡简介]
***  link:/mule-user-guide/v/3.6/unit-testing[单元测试]
***  link:/mule-user-guide/v/3.6/functional-testing[功能测试]
***  link:/mule-user-guide/v/3.6/testing-strategies[测试策略]
***  link:/mule-user-guide/v/3.6/munit[MUnit]
**  link:/mule-user-guide/v/3.6/deploying[部署]
***  link:/mule-user-guide/v/3.6/starting-and-stopping-mule-esb[启动和停止Mule ESB]
***  link:/mule-user-guide/v/3.6/deployment-scenarios[部署方案]
****  link:/mule-user-guide/v/3.6/choosing-the-right-clustering-topology[选择正确的群集拓扑]
****  link:/mule-user-guide/v/3.6/embedding-mule-in-a-java-application-or-webapp[将Mule嵌入到Java应用程序或Web应用程序中]
****  link:/mule-user-guide/v/3.6/deploying-mule-to-jboss[部署Mule到JBoss]
*****  link:/mule-user-guide/v/3.6/mule-as-mbean[作为MBean的骡子]
****  link:/mule-user-guide/v/3.6/deploying-mule-to-weblogic[将Mule部署到WebLogic]
****  link:/mule-user-guide/v/3.6/deploying-mule-to-websphere[将Mule部署到WebSphere]
****  link:/mule-user-guide/v/3.6/deploying-mule-as-a-service-to-tomcat[将Mule作为服务部署到Tomcat]
****  link:/mule-user-guide/v/3.6/application-server-based-hot-deployment[基于应用服务器的热部署]
****  link:/mule-user-guide/v/3.6/classloader-control-in-mule[Mule中的类加载器控制]
*****  link:/mule-user-guide/v/3.6/fine-grain-classloader-control[细粒级加载器控制]
***  link:/mule-user-guide/v/3.6/deploying-to-multiple-environments[部署到多个环境]
***  link:/mule-user-guide/v/3.6/mule-high-availability-ha-clusters[Mule高可用性HA集群]
****  link:/mule-user-guide/v/3.6/evaluating-mule-high-availability-clusters-demo[评估Mule高可用性集群演示]
*****  link:/mule-user-guide/v/3.6/1-installing-the-demo-bundle[1  - 安装演示软件包]
*****  link:/mule-user-guide/v/3.6/2-creating-a-cluster[2  - 创建一个群集]
*****  link:/mule-user-guide/v/3.6/3-deploying-an-application[3  - 部署应用程序]
*****  link:/mule-user-guide/v/3.6/4-applying-load-to-the-cluster[4  - 将加载应用于群集]
*****  link:/mule-user-guide/v/3.6/5-witnessing-failover[5  - 见证故障转移]
*****  link:/mule-user-guide/v/3.6/6-troubleshooting-and-next-steps[6  - 故障排除和后续步骤]
***  link:/mule-user-guide/v/3.6/mule-deployment-model[Mule部署模型]
****  link:/mule-user-guide/v/3.6/hot-deployment[热部署]
****  link:/mule-user-guide/v/3.6/application-deployment[应用程序部署]
****  link:/mule-user-guide/v/3.6/application-format[申请格式]
****  link:/mule-user-guide/v/3.6/mule-application-deployment-descriptor[Mule应用程序部署描述符]
*****  link:/mule-user-guide/v/3.6/application-plugin-format[应用程序插件格式]
***  link:/mule-user-guide/v/3.6/mule-server-notifications[Mule服务器通知]
***  link:/mule-user-guide/v/3.6/profiling-mule[剖析Mule]
***  link:/mule-user-guide/v/3.6/hardening-your-mule-installation[加强你的骡子安装]
***  link:/mule-user-guide/v/3.6/configuring-mule-for-different-deployment-scenarios[针对不同的部署方案配置Mule]
****  link:/mule-user-guide/v/3.6/configuring-mule-as-a-linux-or-unix-daemon[将Mule配置为Linux或Unix守护进程]
****  link:/mule-user-guide/v/3.6/configuring-mule-as-a-windows-service[将Mule配置为Windows服务]
****  link:/mule-user-guide/v/3.6/configuring-mule-to-run-from-a-script[配置Mule从脚本运行]
***  link:/mule-user-guide/v/3.6/preparing-a-gitignore-file[准备一个gitignore文件]
**  link:/mule-user-guide/v/3.6/extending[扩展]
***  link:/mule-user-guide/v/3.6/extending-components[扩展组件]
***  link:/mule-user-guide/v/3.6/custom-message-processors[自定义消息处理器]
***  link:/mule-user-guide/v/3.6/creating-example-archetypes[创建示例原型]
***  link:/mule-user-guide/v/3.6/creating-a-custom-xml-namespace[创建一个自定义的XML命名空间]
***  link:/mule-user-guide/v/3.6/creating-module-archetypes[创建模块原型]
***  link:/mule-user-guide/v/3.6/creating-project-archetypes[创建项目原型]
***  link:/mule-user-guide/v/3.6/creating-transports[创建传输]
****  link:/mule-user-guide/v/3.6/transport-archetype[运输原型]
****  link:/mule-user-guide/v/3.6/transport-service-descriptors[运输服务描述符]
***  link:/mule-user-guide/v/3.6/creating-custom-routers[创建自定义路由器]
**  link:/mule-user-guide/v/3.6/reference[参考]
***  link:/mule-user-guide/v/3.6/team-development-with-mule[与Mule合作开发团队]
****  link:/mule-user-guide/v/3.6/modularizing-your-configuration-files-for-team-development[模块化您的配置文件以进行团队开发]
****  link:/mule-user-guide/v/3.6/using-side-by-side-configuration-files[使用并行配置文件]
****  link:/mule-user-guide/v/3.6/using-modules-in-your-application[在应用程序中使用模块]
****  link:/mule-user-guide/v/3.6/sharing-custom-code[共享自定义代码]
****  link:/mule-user-guide/v/3.6/sharing-custom-configuration-fragments[共享自定义配置片段]
****  link:/mule-user-guide/v/3.6/sharing-applications[共享应用程序]
****  link:/mule-user-guide/v/3.6/sustainable-software-development-practices-with-mule[可持续软件开发实践与Mule]
*****  link:/mule-user-guide/v/3.6/reproducible-builds[可复制的版本]
*****  link:/mule-user-guide/v/3.6/continuous-integration[持续集成]
****  link:/mule-user-guide/v/3.6/understanding-mule-configuration[了解骡子配置]
*****  link:/mule-user-guide/v/3.6/about-the-xml-configuration-file[关于XML配置文件]
*****  link:/mule-user-guide/v/3.6/using-flows-for-service-orchestration[使用流进行服务编排]
*****  link:/mule-user-guide/v/3.6/about-mule-configuration[关于Mule配置]
*****  link:/mule-user-guide/v/3.6/understanding-enterprise-integration-patterns-using-mule[使用Mule了解企业集成模式]
*****  link:/mule-user-guide/v/3.6/understanding-orchestration-using-mule[了解使用Mule的编排]
*****  link:/mule-user-guide/v/3.6/connecting-with-transports-and-connectors[连接运输和连接器]
*****  link:/mule-user-guide/v/3.6/using-mule-with-web-services[在Web服务中使用Mule]
***  link:/mule-user-guide/v/3.6/general-configuration-reference[一般配置参考]
****  link:/mule-user-guide/v/3.6/bpm-configuration-reference[BPM配置参考]
****  link:/mule-user-guide/v/3.6/component-configuration-reference[组件配置参考]
****  link:/mule-user-guide/v/3.6/endpoint-configuration-reference[端点配置参考]
*****  link:/mule-user-guide/v/3.6/mule-endpoint-uris[Mule端点URI]
****  link:/mule-user-guide/v/3.6/exception-strategy-configuration-reference[例外策略配置参考]
****  link:/mule-user-guide/v/3.6/filters-configuration-reference[过滤器配置参考]
****  link:/mule-user-guide/v/3.6/global-settings-configuration-reference[全局设置配置参考]
****  link:/mule-user-guide/v/3.6/notifications-configuration-reference[通知配置参考]
****  link:/mule-user-guide/v/3.6/properties-configuration-reference[属性配置参考]
****  link:/mule-user-guide/v/3.6/security-manager-configuration-reference[安全管理器配置参考]
****  link:/mule-user-guide/v/3.6/transactions-configuration-reference[事务配置参考]
***  link:/mule-user-guide/v/3.6/transports-reference[传输参考]
****  link:/mule-user-guide/v/3.6/connecting-using-transports[使用传输连接]
*****  link:/mule-user-guide/v/3.6/configuring-a-transport[配置传输]
****  link:/mule-user-guide/v/3.6/ajax-transport-reference[AJAX传输参考]
****  link:/mule-user-guide/v/3.6/ejb-transport-reference[EJB传输参考]
****  link:/mule-user-guide/v/3.6/email-transport-reference[电子邮件传输参考]
****  link:/mule-user-guide/v/3.6/file-transport-reference[文件传输参考]
****  link:/mule-user-guide/v/3.6/ftp-transport-reference[FTP传输参考]
****  link:/mule-user-guide/v/3.6/mulesoft-enterprise-java-connector-for-sap-reference[适用于SAP参考的MuleSoft Enterprise Java连接器]
*****  link:/mule-user-guide/v/3.6/sap-jco-extended-properties[SAP JCo扩展属性]
*****  link:/mule-user-guide/v/3.6/sap-jco-server-services-configuration[SAP JCo服务器服务配置]
*****  link:/mule-user-guide/v/3.6/outbound-endpoint-transactions[出站端点事务]
*****  link:/mule-user-guide/v/3.6/troubleshooting-sap-connector[排除SAP连接器故障]
*****  link:/mule-user-guide/v/3.6/xml-definitions[XML定义]
****  link:/mule-user-guide/v/3.6/http-transport-reference[HTTP传输参考]
****  link:/mule-user-guide/v/3.6/https-transport-reference[HTTPS传输参考]
****  link:/mule-user-guide/v/3.6/imap-transport-reference[IMAP传输参考]
****  link:/mule-user-guide/v/3.6/jdbc-transport-reference[JDBC传输参考]
****  link:/mule-user-guide/v/3.6/jetty-transport-reference[码头运输参考]
*****  link:/mule-user-guide/v/3.6/jetty-ssl-transport[Jetty SSL Transport]
****  link:/mule-user-guide/v/3.6/jms-transport-reference[JMS传输参考]
*****  link:/mule-user-guide/v/3.6/activemq-integration[ActiveMQ集成]
*****  link:/mule-user-guide/v/3.6/hornetq-integration[HornetQ集成]
*****  link:/mule-user-guide/v/3.6/open-mq-integration[打开MQ集成]
*****  link:/mule-user-guide/v/3.6/solace-jms[Solace JMS]
*****  link:/mule-user-guide/v/3.6/tibco-ems-integration[Tibco EMS集成]
****  link:/mule-user-guide/v/3.6/multicast-transport-reference[多播传输参考]
****  link:/mule-user-guide/v/3.6/pop3-transport-reference[POP3传输参考]
****  link:/mule-user-guide/v/3.6/quartz-transport-reference[石英运输参考]
****  link:/mule-user-guide/v/3.6/rmi-transport-reference[RMI传输参考]
****  link:/mule-user-guide/v/3.6/servlet-transport-reference[Servlet传输参考]
****  link:/mule-user-guide/v/3.6/sftp-transport-reference[SFTP传输参考]
****  link:/mule-user-guide/v/3.6/smtp-transport-reference[SMTP传输参考]
****  link:/mule-user-guide/v/3.6/ssl-and-tls-transports-reference[SSL和TLS传输参考]
****  link:/mule-user-guide/v/3.6/stdio-transport-reference[STDIO传输参考]
****  link:/mule-user-guide/v/3.6/tcp-transport-reference[TCP传输参考]
****  link:/mule-user-guide/v/3.6/udp-transport-reference[UDP传输参考]
****  link:/mule-user-guide/v/3.6/vm-transport-reference[VM传输参考]
****  link:/mule-user-guide/v/3.6/mule-wmq-transport-reference[Mule WMQ运输参考]
****  link:/mule-user-guide/v/3.6/wsdl-connectors[WSDL连接器]
****  link:/mule-user-guide/v/3.6/xmpp-transport-reference[XMPP传输参考]
***  link:/mule-user-guide/v/3.6/modules-reference[模块参考]
****  link:/mule-user-guide/v/3.6/atom-module-reference[Atom模块参考]
****  link:/mule-user-guide/v/3.6/bpm-module-reference[BPM模块参考]
*****  link:/mule-user-guide/v/3.6/drools-module-reference[Drools模块参考]
*****  link:/mule-user-guide/v/3.6/jboss-jbpm-module-reference[JBoss jBPM模块参考]
****  link:/mule-user-guide/v/3.6/cxf-module-reference[CXF模块参考]
*****  link:/mule-user-guide/v/3.6/cxf-module-overview[CXF模块概述]
*****  link:/mule-user-guide/v/3.6/building-web-services-with-cxf[使用CXF构建Web服务]
*****  link:/mule-user-guide/v/3.6/consuming-web-services-with-cxf[使用CXF消费Web服务]
*****  link:/mule-user-guide/v/3.6/enabling-ws-addressing[启用WS-Addressing]
*****  link:/mule-user-guide/v/3.6/enabling-ws-security[启用WS-Security]
*****  link:/mule-user-guide/v/3.6/cxf-error-handling[CXF错误处理]
*****  link:/mule-user-guide/v/3.6/proxying-web-services-with-cxf[使用CXF代理Web服务]
*****  link:/mule-user-guide/v/3.6/supported-web-service-standards[支持的Web服务标准]
*****  link:/mule-user-guide/v/3.6/using-a-web-service-client-directly[直接使用Web服务客户端]
*****  link:/mule-user-guide/v/3.6/using-http-get-requests[使用HTTP GET请求]
*****  link:/mule-user-guide/v/3.6/using-mtom[使用MTOM]
*****  link:/mule-user-guide/v/3.6/cxf-module-configuration-reference[CXF模块配置参考]
****  link:/mule-user-guide/v/3.6/data-bindings-reference[数据绑定参考]
****  link:/mule-user-guide/v/3.6/jaas-module-reference[JAAS模块参考]
****  link:/mule-user-guide/v/3.6/jboss-transaction-manager-reference[JBoss事务管理器参考]
****  link:/mule-user-guide/v/3.6/jersey-module-reference[泽西模块参考]
****  link:/mule-user-guide/v/3.6/json-module-reference[JSON模块参考]
****  link:/mule-user-guide/v/3.6/rss-module-reference[RSS模块参考]
****  link:/mule-user-guide/v/3.6/scripting-module-reference[脚本模块参考]
****  link:/mule-user-guide/v/3.6/spring-extras-module-reference[Spring Extras模块参考]
****  link:/mule-user-guide/v/3.6/sxc-module-reference[SXC模块参考]
****  link:/mule-user-guide/v/3.6/xml-module-reference[XML模块参考]
*****  link:/mule-user-guide/v/3.6/domtoxml-transformer[DomToXml变压器]
*****  link:/mule-user-guide/v/3.6/jaxb-bindings[JAXB绑定]
*****  link:/mule-user-guide/v/3.6/jaxb-transformers[JAXB变形金刚]
*****  link:/mule-user-guide/v/3.6/jxpath-extractor-transformer[JXPath提取变压器]
*****  link:/mule-user-guide/v/3.6/xml-namespaces[XML命名空间]
*****  link:/mule-user-guide/v/3.6/xmlobject-transformers[XmlObject变形金刚]
*****  link:/mule-user-guide/v/3.6/xmltoxmlstreamreader-transformer[XmlToXMLStreamReader变换器]
*****  link:/mule-user-guide/v/3.6/xquery-support[XQuery支持]
*****  link:/mule-user-guide/v/3.6/xquery-transformer[XQuery变换器]
*****  link:/mule-user-guide/v/3.6/xslt-transformer[XSLT变压器]
*****  link:/mule-user-guide/v/3.6/xpath-extractor-transformer[XPath提取变压器]
*****  link:/mule-user-guide/v/3.6/xpath[XPath的]
***  link:/mule-user-guide/v/3.6/non-mel-expressions-configuration-reference[非MEL表达式配置参考]
****  link:/mule-user-guide/v/3.6/using-non-mel-expressions[使用非MEL表达式]
***  link:/mule-user-guide/v/3.6/creating-non-mel-expression-evaluators[创建非MEL表达式评估器]
***  link:/mule-user-guide/v/3.6/schema-documentation[模式文档]
****  link:/mule-user-guide/v/3.6/notes-on-mule-3.0-schema-changes[关于Mule 3.0模式更改的注意事项]
***  link:/mule-user-guide/v/3.6/mule-esb-3-and-test-api-javadoc[Mule ESB 3和测试API Javadoc]
***  link:/mule-user-guide/v/3.6/mulesoft-security-update-policy[MuleSoft安全更新政策]
